RESOLVED FIXED280986
REGRESSION(269351@main): RELEASE_ASSERT fires when rotating an SVG element around a zero vector
https://bugs.webkit.org/show_bug.cgi?id=280986
Summary REGRESSION(269351@main): RELEASE_ASSERT fires when rotating an SVG element ar...
Said Abou-Hallawa
Reported 2024-10-07 09:57:13 PDT
Created attachment 472842 [details] test case Open the attached test case. Result: A RELEASE_ASSERT will fire. This happens because 269351@main changed LegacyRenderSVGRoot::strokeBoundingBox() to return the value of Markable<FloatRect>. The test case causes the localToParentTransform to be all NaN AffineTransform which causes the strokeBoundingBox to be all also a NaN FloatRect. The problem Markable<FloatRect>::isEmptyValue() returns true if FloatRect::isNaN() is true.
Attachments
test case (357 bytes, text/html)
2024-10-07 09:57 PDT, Said Abou-Hallawa
no flags
Said Abou-Hallawa
Comment 1 2024-10-07 09:57:40 PDT
Said Abou-Hallawa
Comment 2 2024-10-07 10:12:13 PDT
EWS
Comment 3 2024-10-07 13:19:57 PDT
Committed 284781@main (fe385386b01e): <https://commits.webkit.org/284781@main> Reviewed commits have been landed. Closing PR #34782 and removing active labels.
EWS
Comment 4 2024-10-10 13:18:32 PDT
Committed 283286.239@safari-7620-branch (500c03fe1bde): <https://commits.webkit.org/283286.239@safari-7620-branch> Reviewed commits have been landed. Closing PR #2000 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.