REGRESSION(269351@main): RELEASE_ASSERT fires when rotating an SVG element around a zero vector https://bugs.webkit.org/show_bug.cgi?id=280986 rdar://135587778

Reviewed by Simon Fraser.

Don't normalize the zero vector, when rotating an SVG element around it.

* LayoutTests/svg/css/svg-css-rotate-zero-vector-expected.txt: Added.
* LayoutTests/svg/css/svg-css-rotate-zero-vector.html: Added.
* Source/WebCore/platform/graphics/transforms/RotateTransformOperation.cpp:
(WebCore::RotateTransformOperation::blend):

Canonical link: https://commits.webkit.org/284781@main